# complex-bessel-test

./: .gitignore  Cargo.toml  README.md  run
docs/: guide.md
fortran/: bench.f  compute_grid.f  machcon_ieee.f
python/: compare.py  compute_fortran.py  compute_mpmath.py  compute_scipy.py  dashboard.py  generate_grid.py  pyproject.toml  run.py
results/: test_grid.json
