[package]
name = "complex-bessel-test"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "compute"
path = "src/bin/compute.rs"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[dependencies]
complex-bessel = "0.2.0"
num-complex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
